--- a/ja.html
+++ b/ja.html
@@ -21,8 +21,8 @@
       <div class="container navbar d-flex">
         <nav class="justify-content-start" aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item active">
-              <i class="moji moji-uk"></i>English
+            <li class="breadcrumb-item">
+              <a href="index.html"><i class="moji moji-uk"></i>English</a>
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
@@ -49,9 +49,7 @@
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
             </li>
-            <li class="breadcrumb-item active">
-              日本語
-            </li>
+            <li class="breadcrumb-item active">日本語</li>
           </ol>
         </nav>
       </div>
@@ -128,23 +126,21 @@
               </p>
               <p>
                 スカートが大好き 🍱 "グルメ"
-                <a href="https://en.wikipedia.org/wiki/Wu_Chinese"
-                  >呉語</a
+                <a href="https://en.wikipedia.org/wiki/Wu_Chinese">呉語</a
                 >の母語話者
               </p>
-              <p>👩🏻‍🎓 大学でスペイン語を専攻しとります。 </p>
-              <p>
-                📷 写真。音ゲーマー：maimai と Sound Voltex.
-              </p>
-              <p>✈️ 旅行がめっちゃ好きやねん！ようけの国に旅行してん。 </p>
-              <p>👀 言語学、NLP、その他に興味があんねん。 </p>
+              <p>👩🏻‍🎓 大学でスペイン語を専攻しとります。</p>
+              <p>📷 写真。音ゲーマー：maimai と Sound Voltex.</p>
+              <p>✈️ 旅行がめっちゃ好きやねん！ようけの国に旅行してん。</p>
+              <p>👀 言語学、NLP、その他に興味があんねん。</p>
               <p>
                 ⌨️ <i class="moji moji-python"></i>Python<br />
-                <del
-                  ><i class="moji moji-php"></i>ＰＨＰはセカイイチ！</del
-                >
+                <del><i class="moji moji-php"></i>ＰＨＰはセカイイチ！</del>
               </p>
-              <p><i class="moji moji-archlinux"></i>アーチ・リナックスのユーザー。</p>
+              <p>
+                <i class="moji moji-archlinux"></i
+                >アーチ・リナックスのユーザー。
+              </p>
             </div>
           </div>
         </div>
@@ -165,9 +161,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted">
-          &copy;<span id="year"></span> 山前
-        </span>
+        <span class="text-muted"> &copy;<span id="year"></span> 山前 </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
