--- a/tai.html
+++ b/tai.html
@@ -24,8 +24,8 @@
       <div class="container navbar d-flex">
         <nav class="justify-content-start" aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item active">
-              <i class="moji moji-uk"></i>English
+            <li class="breadcrumb-item">
+              <a href="index.html"><i class="moji moji-uk"></i>English</a>
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
@@ -164,9 +164,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted">
-          &copy;<span id="year"></span>
-        </span>
+        <span class="text-muted"> &copy;<span id="year"></span> </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
