--- a/bo.html
+++ b/bo.html
@@ -29,8 +29,8 @@
       <div class="container navbar d-flex">
         <nav class="justify-content-start" aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item active">
-              <i class="moji moji-uk"></i>English
+            <li class="breadcrumb-item">
+              <a href="index.html"><i class="moji moji-uk"></i>English</a>
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
