--- a/ug-uly.html
+++ b/ug-uly.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>shanchenning tor bët</title>
+    <title>shenchyenning tor bët</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
@@ -83,7 +83,7 @@
               >😔 Xushal yoq</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-right: 130px">Shanchen</h2>
+              <h2 class="card-title" style="margin-right: 130px">Shenchyen</h2>
               <table class="sociales">
                 <tr>
                   <td>
@@ -124,12 +124,12 @@
                   </td>
                 </tr>
               </table>
-              <p>Qarshi alimiz! 👋🏻 Men shanchen.</p>
+              <p>Qarshi alimiz! 👋🏻 Men shenchyen.</p>
               <p>
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i
                 >Ghururluq
                 <a href="https://tr.wikipedia.org/wiki/Transseks%C3%BCellik"
-                  >kwashingbeliq</a
+                  >kwashingbyëlik</a
                 >. <a href="https://mtf.wiki/">MtF-Wiki</a>-ning eza.
               </p>
               <p>Yopkani söymen. 🍱 «Ghalcha».</p>
