--- a/ug.html
+++ b/ug.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>شانچەننىڭ تور بېت</title>
+    <title>شەنچيەننىڭ تور بېت</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.rtl.min.css" rel="stylesheet" />
     <style>
@@ -88,7 +88,7 @@
               >😔 خۇشال يوق</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-right: 130px">شانچەن</h2>
+              <h2 class="card-title" style="margin-right: 130px">شەنچيەن</h2>
               <table class="sociales">
                 <tr>
                   <td>
@@ -129,12 +129,12 @@
                   </td>
                 </tr>
               </table>
-              <p>قارشى ئالىمىز! 👋🏻 مەن شانچەن.</p>
+              <p>قارشى ئالىمىز! 👋🏻 مەن شەنچيەن.</p>
               <p>
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i
                 >غۇرۇرلۇق
                 <a href="https://tr.wikipedia.org/wiki/Transseks%C3%BCellik"
-                  >كۋاشىڭبەلىق</a
+                  >كۋاشىڭبېلىك</a
                 >. <a href="https://mtf.wiki/">MtF-Wiki</a>-نىڭ ئەزا.
               </p>
               <p>يوپكانى سۆيمەن. 🍱 «غالچا».</p>
