--- a/ug-uly.html
+++ b/ug-uly.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>shenchyenning tor bët</title>
+    <title>Altaghning tor bët</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
@@ -34,7 +34,7 @@
               <a href="cat.html">chatalà</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="ar.html"><i class="moji moji-ar"></i>alعrbyة</a>
+              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
@@ -83,7 +83,7 @@
               >😔 Xushal yoq</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-right: 130px">Shenchyen</h2>
+              <h2 class="card-title" style="margin-right: 130px">Altagh (Shenchyen)</h2>
               <table class="sociales">
                 <tr>
                   <td>
@@ -124,7 +124,7 @@
                   </td>
                 </tr>
               </table>
-              <p>Qarshi alimiz! 👋🏻 Men shenchyen.</p>
+              <p>Yaxshimu! 👋🏻 Men Altagh.</p>
               <p>
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i
                 >Ghururluq
