--- a/ug.html
+++ b/ug.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>شەنچيەننىڭ تور بېت</title>
+    <title>التاغنىڭ تور بېت</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.rtl.min.css" rel="stylesheet" />
     <style>
@@ -88,7 +88,7 @@
               >😔 خۇشال يوق</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-right: 130px">شەنچيەن</h2>
+              <h2 class="card-title" style="margin-right: 130px">التاغ (شەنچيەن)</h2>
               <table class="sociales">
                 <tr>
                   <td>
@@ -129,7 +129,7 @@
                   </td>
                 </tr>
               </table>
-              <p>قارشى ئالىمىز! 👋🏻 مەن شەنچيەن.</p>
+              <p>ياخشىمۇ! 👋🏻 مەن التاغ.</p>
               <p>
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i
                 >غۇرۇرلۇق
