--- a/ar.html
+++ b/ar.html
@@ -9,7 +9,8 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Amiri&family=Noto+Sans");
       main {
-        font-family: "Noto Sans", "Amiri", "Noto Sans Arabic", var(--bs-font-sans-serif);
+        font-family: "Noto Sans", "Amiri", "Noto Sans Arabic",
+          var(--bs-font-sans-serif);
       }
       .sociales a {
         text-decoration: none;
@@ -163,7 +164,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted"> &copy;<span id="year"></span> Estela </span>
+        <span class="text-muted">&#127279;<span id="year"></span> إستيلا </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
