--- a/cat.html
+++ b/cat.html
@@ -155,7 +155,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted"> &copy;<span id="year"></span> Estela </span>
+        <span class="text-muted">&#127279;<span id="year"></span> Estela </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
