--- a/eo.html
+++ b/eo.html
@@ -160,7 +160,8 @@
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
         <span class="text-muted">
-          &copy;<span id="year"></span> Estela <a href="amigos.html">Amikoj</a>
+          &#127279;<span id="year"></span> Estela
+          <a href="amigos.html">Amikoj</a>
         </span>
       </div>
     </footer>
