--- a/index.html
+++ b/index.html
@@ -170,8 +170,13 @@
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
         <span class="text-muted">
-          &copy;<span id="year"></span> Estela <a href="amigos.html">Friends</a>
+         &#127279;<span id="year"></span> Estela <a href="amigos.html">Friends</a>
         </span>
+        <br />
+           <a href="https://icp.gov.moe/?keyword=20223233" target="_blank"
+             >Moe ICP No.20223233</a
+           >
+         </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
