--- a/ru.html
+++ b/ru.html
@@ -159,7 +159,7 @@
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
         <span class="text-muted">
-          &copy;<span id="year"></span> Предгорка
+          &#127279;<span id="year"></span> Предгорка
           <a href="amigos.html">Товарищи</a>
         </span>
       </div>
