--- a/ug-uly.html
+++ b/ug-uly.html
@@ -83,7 +83,9 @@
               >😔 Xushal yoq</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-right: 130px">Altagh (Shenchyen)</h2>
+              <h2 class="card-title" style="margin-right: 130px">
+                Altagh (Shenchyen)
+              </h2>
               <table class="sociales">
                 <tr>
                   <td>
@@ -169,7 +171,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted"> &copy;<span id="year"></span> Estela </span>
+        <span class="text-muted">&#127279;<span id="year"></span> Altagh </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
