--- a/uk.html
+++ b/uk.html
@@ -33,9 +33,7 @@
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
-            <li class="breadcrumb-item">
-              <i class="moji moji-su"></i>Русский
-            </li>
+            <li class="breadcrumb-item"><i class="moji moji-su"></i>Русский</li>
             <li class="breadcrumb-item active">український</li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
@@ -157,7 +155,7 @@
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
         <span class="text-muted">
-          &copy;<span id="year"></span> Предгорка
+          &#127279;<span id="year"></span> Предгорка
         </span>
       </div>
     </footer>
