--- a/zh.html
+++ b/zh.html
@@ -159,7 +159,8 @@
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
         <span class="text-muted">
-          &copy;<span id="year"></span> 山前 <a href="amigos.html">友情链接</a>
+          &#127279;<span id="year"></span> 山前
+          <a href="amigos.html">友情链接</a>
           <br />
           <a href="https://icp.gov.moe/?keyword=20223233" target="_blank"
             >萌ICP备20223233号</a
