--- a/es.html
+++ b/es.html
@@ -154,7 +154,10 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted"> &copy;<span id="year"></span> Estela </span>
+        <span class="text-muted"
+          >&#127279;<span id="year"></span> Estela
+          <a href="amigos.html">Amigos</a></span
+        >
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
