--- a/ja.html
+++ b/ja.html
@@ -161,7 +161,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted"> &copy;<span id="year"></span> 山前 </span>
+        <span class="text-muted">&#127279;<span id="year"></span> 山前 </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
