--- a/tai.html
+++ b/tai.html
@@ -164,7 +164,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted"> &copy;<span id="year"></span> </span>
+        <span class="text-muted">&#127279;<span id="year"></span> </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
