--- a/ug.html
+++ b/ug.html
@@ -88,7 +88,9 @@
               >😔 خۇشال يوق</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-right: 130px">التاغ (شەنچيەن)</h2>
+              <h2 class="card-title" style="margin-right: 130px">
+                التاغ (شەنچيەن)
+              </h2>
               <table class="sociales">
                 <tr>
                   <td>
@@ -134,7 +136,7 @@
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i
                 >غۇرۇرلۇق
                 <a href="https://tr.wikipedia.org/wiki/Transseks%C3%BCellik"
-                  >كۋاشىڭبېلىك</a
+                  >كۋاشىڭبيېلىك</a
                 >. <a href="https://mtf.wiki/">MtF-Wiki</a>-نىڭ ئەزا.
               </p>
               <p>يوپكانى سۆيمەن. 🍱 «غالچا».</p>
@@ -176,7 +178,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted"> &copy;<span id="year"></span> Estela </span>
+        <span class="text-muted">&#127279;<span id="year"></span> التاغ </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
