--- a/zht.html
+++ b/zht.html
@@ -162,10 +162,11 @@
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
         <span class="text-muted">
-          &copy;<span id="year"></span> 山前 <a href="amigos.html">友情链接</a>
+          &#127279;<span id="year"></span> 山前
+          <a href="amigos.html">友情鏈接</a>
           <br />
           <a href="https://icp.gov.moe/?keyword=20223233" target="_blank"
-            >萌ICP备20223233号</a
+            >萌ICP備20223233號</a
           >
         </span>
       </div>
