--- a/es.html
+++ b/es.html
@@ -139,6 +139,34 @@
         </div>
         <div class="container-fluid d-flex justify-content-center">
           <div class="card">
+            <div class="card-header">Comprarme un café</div>
+            <div class="card-body">
+              <img src="assets/images/feed.png" /><br />
+              <hr />
+              <span style="background-color: lightgrey; color: black">
+                <img
+                  style="height: 1em; vertical-align: baseline"
+                  src="https://simpleicons.org/icons/ethereum.svg"
+                />ETH
+              </span>
+              <span style="background-color: black; color: white"
+                >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
+              ><br />
+              <a href="https://liberapay.com/estela/donate"
+                ><img
+                  alt="Donate using Liberapay"
+                  src="https://liberapay.com/assets/widgets/donate.svg"
+              /></a>
+              <a href="https://ko-fi.com/saeziae"
+                ><img
+                  alt="Buy me a coffee"
+                  src="https://img.shields.io/static/v1?label=Ko-fi&message=Buy+me+a+coffee&color=FF5E5B&logo=Ko-fi&style=flat-square"
+              /></a>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid d-flex justify-content-center">
+          <div class="card">
             <div class="card-header">
               <i class="moji moji-github"></i>
             </div>
