--- a/index.html
+++ b/index.html
@@ -145,10 +145,35 @@
                 >
               </p>
               <p><i class="moji moji-archlinux"></i>ArchLinux user.</p>
-              <p>
-                <img src="assets/images/feed.png" /><br />投食山前(Donate via
-                AliPay and WeChat)
-              </p>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid d-flex justify-content-center">
+          <div class="card">
+            <div class="card-header">Buy me a coffee</div>
+            <div class="card-body">
+              <img src="assets/images/feed.png" /><br />投食山前 (via AliPay and
+              WeChat)
+              <hr />
+              <span style="background-color: lightgrey; color: black">
+                <img
+                  style="height: 1em; vertical-align: baseline"
+                  src="https://simpleicons.org/icons/ethereum.svg"
+                />ETH
+              </span>
+              <span style="background-color: black; color: white"
+                >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
+              ><br />
+              <a href="https://liberapay.com/estela/donate"
+                ><img
+                  alt="Donate using Liberapay"
+                  src="https://liberapay.com/assets/widgets/donate.svg"
+              /></a>
+              <a href="https://ko-fi.com/saeziae"
+                ><img
+                  alt="Buy me a coffee"
+                  src="https://img.shields.io/static/v1?label=Ko-fi&message=Buy+me+a+coffee&color=FF5E5B&logo=Ko-fi&style=flat-square"
+              /></a>
             </div>
           </div>
         </div>
@@ -170,13 +195,13 @@
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
         <span class="text-muted">
-         &#127279;<span id="year"></span> Estela <a href="amigos.html">Friends</a>
+          &#127279;<span id="year"></span> Estela
+          <a href="amigos.html">Friends</a>
+          <br />
+          <a href="https://icp.gov.moe/?keyword=20223233" target="_blank"
+            >Moe ICP No.20223233</a
+          >
         </span>
-        <br />
-           <a href="https://icp.gov.moe/?keyword=20223233" target="_blank"
-             >Moe ICP No.20223233</a
-           >
-         </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
