--- a/zh.html
+++ b/zh.html
@@ -137,7 +137,34 @@
                 <del><i class="moji moji-php"></i>PHP 是世界上最好的语言！</del>
               </p>
               <p><i class="moji moji-archlinux"></i>ArchLinux 用户。</p>
-              <p><img src="assets/images/feed.png" /><br />投食山前</p>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid d-flex justify-content-center">
+          <div class="card">
+            <div class="card-header">投食山前</div>
+            <div class="card-body">
+              <img src="assets/images/feed.png" /><br />
+              <hr />
+              <span style="background-color: lightgrey; color: black">
+                <img
+                  style="height: 1em; vertical-align: baseline"
+                  src="https://simpleicons.org/icons/ethereum.svg"
+                />ETH
+              </span>
+              <span style="background-color: black; color: white"
+                >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
+              ><br />
+              <a href="https://liberapay.com/estela/donate"
+                ><img
+                  alt="Donate using Liberapay"
+                  src="https://liberapay.com/assets/widgets/donate.svg"
+              /></a>
+              <a href="https://ko-fi.com/saeziae"
+                ><img
+                  alt="Buy me a coffee"
+                  src="https://img.shields.io/static/v1?label=Ko-fi&message=Buy+me+a+coffee&color=FF5E5B&logo=Ko-fi&style=flat-square"
+              /></a>
             </div>
           </div>
         </div>
