--- a/index.html
+++ b/index.html
@@ -161,7 +161,12 @@
                   src="https://simpleicons.org/icons/ethereum.svg"
                 />ETH
               </span>
-              <span style="background-color: black; color: white"
+              <span
+                style="
+                  word-break: break-all;
+                  background-color: black;
+                  color: white;
+                "
                 >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
               ><br />
               <a href="https://liberapay.com/estela/donate"
