--- a/zht.html
+++ b/zht.html
@@ -149,19 +149,23 @@
             <div class="card-body">
               <img src="assets/images/feed.png" /><br />
               <hr />
-              <span style="background-color: lightgrey; color: black">
-                <img
-                  style="height: 1em; vertical-align: baseline"
-                  src="https://simpleicons.org/icons/ethereum.svg"
-                />ETH
-              </span>
-              <span
-                style="
-                  word-break: break-all;
-                  background-color: black;
-                  color: white;
-                "
-                >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
+              <span class="font-monospace" style="font-size: 0.8em"
+                ><span
+                  style="
+                    background-color: lightgrey;
+                    color: black;
+                    padding: 5px 0px 5px 5px;
+                  "
+                  ><i class="moji moji-eth"></i>ETH&nbsp;</span
+                ><span
+                  style="
+                    word-break: break-all;
+                    background-color: black;
+                    color: white;
+                    padding: 5px 5px 5px 5px;
+                  "
+                  >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
+                ></span
               ><br />
               <a href="https://liberapay.com/estela/donate"
                 ><img
