--- a/ar.html
+++ b/ar.html
@@ -7,7 +7,7 @@
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.rtl.min.css" rel="stylesheet" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Amiri&family=Noto+Sans");
+      @import url("https://fonts.googleapis.com/css2?family=Amiri&family=Noto+Sans&display=swap");
       main {
         font-family: "Noto Sans", "Amiri", "Noto Sans Arabic",
           var(--bs-font-sans-serif);
