--- a/ja.html
+++ b/ja.html
@@ -7,7 +7,7 @@
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP");
+      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
       main {
         font-family: "Noto Sans JP", var(--bs-font-sans-serif);
       }
