--- a/zh.html
+++ b/zh.html
@@ -7,7 +7,7 @@
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC");
+      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap");
       main {
         font-family: "Noto Sans SC", var(--bs-font-sans-serif);
       }
@@ -146,19 +146,23 @@
             <div class="card-body">
               <img src="assets/images/feed.png" /><br />
               <hr />
-              <span style="background-color: lightgrey; color: black">
-                <img
-                  style="height: 1em; vertical-align: baseline"
-                  src="https://simpleicons.org/icons/ethereum.svg"
-                />ETH
-              </span>
-              <span
-                style="
-                  word-break: break-all;
-                  background-color: black;
-                  color: white;
-                "
-                >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
+              <span class="font-monospace" style="font-size: 0.8em"
+                ><span
+                  style="
+                    background-color: lightgrey;
+                    color: black;
+                    padding: 5px 0px 5px 5px;
+                  "
+                  ><i class="moji moji-eth"></i>ETH&nbsp;</span
+                ><span
+                  style="
+                    word-break: break-all;
+                    background-color: black;
+                    color: white;
+                    padding: 5px 5px 5px 5px;
+                  "
+                  >0x888117715a884a7F84B88CBBBF7998745A5FF96D</span
+                ></span
               ><br />
               <a href="https://liberapay.com/estela/donate"
                 ><img
