--- a/eo.html
+++ b/eo.html
@@ -123,9 +123,13 @@
                 <a href="https://mtf.wiki/">MtF-Wiki</a>.
               </p>
               <p>
-                🍱 "Gourmet". Denaska parolanto de
+                Denaska parolanto de
                 <a href="https://eo.wikipedia.org/wiki/Vua_lingvo">Vua lingvo</a
                 >.
+                <a href="https://nguphing.saeziae.net"
+                  >Wu language input method</a
+                >
+                estas nun en aktiva evoluo.
               </p>
               <p>👩🏻‍🎓 Mi specialiĝas pri hispana lingvo ĉe universitato.</p>
               <p>📷 Fotisto. Ludanto de ritmaj ludoj.</p>
@@ -139,6 +143,7 @@
                 >
               </p>
               <p><i class="moji moji-archlinux"></i>Uzanto de ArchLinux.</p>
+              <audio src="assets/La_Internacio.ogg" autoplay controls></audio>
             </div>
           </div>
         </div>
