--- a/es.html
+++ b/es.html
@@ -122,6 +122,14 @@
                 Orgullosa de ser trans. Contribuidora de
                 <a href="https://mtf.wiki/">MtF-Wiki</a>.
               </p>
+              <p>
+                Parlante nativa de
+                <a href="https://es.wikipedia.org/wiki/Chino_Wu">Lingua Wu</a>.
+                <a href="https://nguphing.saeziae.net"
+                  >Wu language input method</a
+                >
+                está ahora en desarrollo activo.
+              </p>
               <p>Me gusta falda tableada(JKs). 🍱 "Gourmet".</p>
               <p>
                 👩🏻‍🎓 Estoy estudiando español como especialidad en mi universidad.
