--- a/index.html
+++ b/index.html
@@ -124,12 +124,16 @@
                 <a href="https://mtf.wiki/">MtF-Wiki</a>.
               </p>
               <p>
-                Skirt(JKs) lover. 🍱 "Gourmet".
                 <a href="https://en.wikipedia.org/wiki/Wu_Chinese"
                   >Wu language</a
                 >
                 native speaker.
+                <a href="https://nguphing.saeziae.net"
+                  >Wu language input method</a
+                >
+                is now in active development.
               </p>
+              <p>Skirt lover. 🍱 "Gourmet".</p>
               <p>👩🏻‍🎓 Majoring in Spanish language at university.</p>
               <p>
                 📷 Photographer. Rhythm game player, now stuck on maimai and
@@ -155,7 +159,7 @@
               <img src="assets/images/feed.png" /><br />投食山前 (via AliPay and
               WeChat)
               <hr />
-              <span class="font-monospace" style="font-size: 0.8em;"
+              <span class="font-monospace" style="font-size: 0.8em"
                 ><span
                   style="
                     background-color: lightgrey;
