--- a/zh.html
+++ b/zh.html
@@ -127,7 +127,12 @@
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>
                 跨儿骄傲。 <a href="https://mtf.wiki/">MtF-Wiki</a>维护人员。
               </p>
-              <p>JK格裙那可太喜欢了 🍱吃货 吴语母语者</p>
+              <p>
+                <a href="https://zh.wikipedia.org/wiki/吴语">吴语</a>母语者。
+                <a href="https://nguphing.saeziae.net">吴语输入法</a
+                >绝赞开发中。
+              </p>
+              <p>JK格裙那可太喜欢了 🍱吃货</p>
               <p>👩🏻‍🎓 现在在大学攻读西班牙语。</p>
               <p>📷 摄影。音游，maimai陷入中，SDVX练习中。</p>
               <p>✈️ 想要周游世界的旅行者，去过好多国家了。</p>
