--- a/zht.html
+++ b/zht.html
@@ -130,7 +130,12 @@
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>
                 跨兒驕傲。 <a href="https://mtf.wiki/">MtF-Wiki</a>維護人員。
               </p>
-              <p>JK格裙那可太喜歡了 🍱喫貨 吳語母語者</p>
+              <p>
+                <a href="https://zh.wikipedia.org/wiki/吳語">吳語</a>母語者。
+                <a href="https://nguphing.saeziae.net">吳語輸入法</a
+                >絕讚開發中。
+              </p>
+              <p>JK格裙那可太喜歡了 🍱喫貨</p>
               <p>👩🏻‍🎓 現在在大學攻讀西班牙語。</p>
               <p>📷 攝影。音遊，maimai陷入中，SDVX練習中</p>
               <p>✈️ 想要周遊世界的旅行者，去過好多國家了。</p>
