--- a/ja.html
+++ b/ja.html
@@ -78,7 +78,14 @@
             <div class="card-body">
               <h2 class="card-title" style="margin-left: 130px">
                 <ruby>山<rt>さん</rt>前<rt>ぜん</rt> </ruby>
-              </h2>
+                            </h2>
+              <p>
+                <i class="moji moji-trans"></i>
+                <i class="moji moji-feminism"></i>
+                <i class="moji moji-communism"></i>
+                <i class="moji moji-peace"></i>
+                <i class="moji moji-fist"></i>
+              </p>
               <table>
                 <tr>
                   <td>
@@ -150,7 +157,7 @@
               <i class="moji moji-github"></i>
             </div>
             <div class="card-body">
-              <img src="https://estela.moe/fetchgraph.php" />
+              <img src="http://api.estela.moe/fetchgraph/?user=saeziae" />
               <img
                 src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
               />
