--- a/lat.html
+++ b/lat.html
@@ -76,7 +76,14 @@
             <div class="card-body">
               <h2 class="card-title" style="margin-left: 130px">
                 Stēlla (Promontāna)
-              </h2>
+                            </h2>
+              <p>
+                <i class="moji moji-trans"></i>
+                <i class="moji moji-feminism"></i>
+                <i class="moji moji-communism"></i>
+                <i class="moji moji-peace"></i>
+                <i class="moji moji-fist"></i>
+              </p>
               <table>
                 <tr>
                   <td>
@@ -139,7 +146,7 @@
               <i class="moji moji-github"></i>
             </div>
             <div class="card-body">
-              <img src="https://estela.moe/fetchgraph.php" />
+              <img src="http://api.estela.moe/fetchgraph/?user=saeziae" />
               <img
                 src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
               />
