--- a/ru.html
+++ b/ru.html
@@ -33,10 +33,10 @@
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
-            <li class="breadcrumb-item active">
-              <i class="moji moji-su"></i>Русский
-            </li>
             <li class="breadcrumb-item">
+              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
+            </li>
+            <li class="breadcrumb-item active">
               <a href="uk.html">український</a>
             </li>
             <li class="breadcrumb-item">
@@ -75,7 +75,14 @@
               >😔 Депрессия</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-left: 130px">Предгорка</h2>
+              <h2 class="card-title" style="margin-left: 130px">Предгорка              </h2>
+              <p>
+                <i class="moji moji-trans"></i>
+                <i class="moji moji-feminism"></i>
+                <i class="moji moji-communism"></i>
+                <i class="moji moji-peace"></i>
+                <i class="moji moji-fist"></i>
+              </p>
               <strong>С Интернационалом, воспрянет род людской!</strong>
               <table>
                 <tr>
@@ -147,7 +154,7 @@
               <i class="moji moji-github"></i>
             </div>
             <div class="card-body">
-              <img src="https://estela.moe/fetchgraph.php" />
+              <img src="http://api.estela.moe/fetchgraph/?user=saeziae" />
               <img
                 src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
               />
