--- a/ug-uly.html
+++ b/ug-uly.html
@@ -85,7 +85,15 @@
             <div class="card-body">
               <h2 class="card-title" style="margin-right: 130px">
                 Altagh (Shenchyen)
-              </h2>
+                            </h2>
+              <p>
+                <i class="moji moji-trans"></i>
+                <i class="moji moji-feminism"></i>
+                <i class="moji moji-communism"></i>
+                <i class="moji moji-peace"></i>
+                <i class="moji moji-fist"></i>
+              </p>
+              <p>Bizning hayat bolushimiz yaman gherezge qarshi eng chong küresh.</p>
               <table class="sociales">
                 <tr>
                   <td>
@@ -159,7 +167,7 @@
                 <i class="moji moji-github"></i>
               </div>
               <div class="card-body">
-                <img src="https://estela.moe/fetchgraph.php" />
+                <img src="http://api.estela.moe/fetchgraph/?user=saeziae" />
                 <img
                   src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
                 />
