--- a/uk.html
+++ b/uk.html
@@ -71,7 +71,14 @@
               >😔 Депресія</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-left: 130px">Предгорка</h2>
+              <h2 class="card-title" style="margin-left: 130px">Предгорка              </h2>
+              <p>
+                <i class="moji moji-trans"></i>
+                <i class="moji moji-feminism"></i>
+                <i class="moji moji-communism"></i>
+                <i class="moji moji-peace"></i>
+                <i class="moji moji-fist"></i>
+              </p>
               <table>
                 <tr>
                   <td>
@@ -143,7 +150,7 @@
               <i class="moji moji-github"></i>
             </div>
             <div class="card-body">
-              <img src="https://estela.moe/fetchgraph.php" />
+              <img src="http://api.estela.moe/fetchgraph/?user=saeziae" />
               <img
                 src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
               />
