--- a/bo.html
+++ b/bo.html
@@ -89,7 +89,14 @@
               <h2 class="card-title" style="margin-left: 130px">
                 <span class="art">རི་མདུན་</span>
                 <span style="font-size: 0.6em">༺ཧྲན་ཇནས་༻</span>
-              </h2>
+                            </h2>
+              <p>
+                <i class="moji moji-trans"></i>
+                <i class="moji moji-feminism"></i>
+                <i class="moji moji-communism"></i>
+                <i class="moji moji-peace"></i>
+                <i class="moji moji-fist"></i>
+              </p>
               <strong>འཁོར་ལོ་རི་སར་སླེབས་ན་ལམ་རྗ་ཐོན།</strong>
               <table>
                 <tr>
@@ -155,7 +162,7 @@
               <i class="moji moji-github"></i>
             </div>
             <div class="card-body">
-              <img src="https://estela.moe/fetchgraph.php" />
+              <img src="http://api.estela.moe/fetchgraph/?user=saeziae" />
               <img
                 src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
               />
