--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
               <h2 class="card-title" style="margin-left: 130px">
                 Estela (Promontana)
               </h2>
+              <p>
+                <i class="moji moji-trans"></i>
+                <i class="moji moji-feminism"></i>
+                <i class="moji moji-communism"></i>
+                <i class="moji moji-peace"></i>
+                <i class="moji moji-fist"></i>
+              </p>
               <table>
                 <tr>
                   <td>
@@ -196,7 +203,7 @@
               <i class="moji moji-github"></i>
             </div>
             <div class="card-body">
-              <img src="https://estela.moe/fetchgraph.php" />
+              <img src="http://api.estela.moe/fetchgraph/?user=saeziae" />
               <img
                 src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
               />
