--- a/ug.html
+++ b/ug.html
@@ -9,7 +9,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Amiri&family=Noto+Sans&display=swap");
       main {
-        font-family: "Noto Sans", "Amiri", "Noto Sans Arabic",
+        font-family: "Amiri", "Noto Sans Arabic", "Noto Sans",
           var(--bs-font-sans-serif);
       }
       .sociales a {
@@ -91,6 +91,15 @@
               <h2 class="card-title" style="margin-right: 130px">
                 التاغ (شەنچيەن)
               </h2>
+              <p>
+                <i class="moji moji-trans"></i>
+                <i class="moji moji-feminism"></i>
+                <i class="moji moji-communism"></i>
+                <i class="moji moji-peace"></i>
+                <i class="moji moji-fist"></i>
+              </p>
+              <p>بىزنىڭ ھايات بولۇشىمىز يامان غەرەزگە قارشى ئەڭ چوڭ كۈرەش!</p>
+
               <table class="sociales">
                 <tr>
                   <td>
@@ -166,7 +175,7 @@
                 <i class="moji moji-github"></i>
               </div>
               <div class="card-body">
-                <img src="https://estela.moe/fetchgraph.php" />
+                <img src="http://api.estela.moe/fetchgraph/?user=saeziae" />
                 <img
                   src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
                 />
