--- a/zh.html
+++ b/zh.html
@@ -82,7 +82,14 @@
               >😔抑郁中</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-left: 130px">山前</h2>
+              <h2 class="card-title" style="margin-left: 130px">山前              </h2>
+              <p>
+                <i class="moji moji-trans"></i>
+                <i class="moji moji-feminism"></i>
+                <i class="moji moji-communism"></i>
+                <i class="moji moji-peace"></i>
+                <i class="moji moji-fist"></i>
+              </p>
               <table>
                 <tr>
                   <td>
@@ -188,7 +195,7 @@
               <i class="moji moji-github"></i>
             </div>
             <div class="card-body">
-              <img src="https://estela.moe/fetchgraph.php" />
+              <img src="http://api.estela.moe/fetchgraph/?user=saeziae" />
               <img
                 src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
               />
