--- a/ug-uly.html
+++ b/ug-uly.html
@@ -13,6 +13,14 @@
       .card img {
         max-width: 100%;
       }
+      @font-face {
+        font-family: CL;
+        src: url(assets/cl.woff2);
+        font-display: swap;
+      }
+      footer {
+        font-family: CL, var(--bs-font-sans-serif);
+      }
     </style>
   </head>
   <body class="d-flex flex-column h-100">
@@ -85,7 +93,7 @@
             <div class="card-body">
               <h2 class="card-title" style="margin-right: 130px">
                 Altagh (Shenchyen)
-                            </h2>
+              </h2>
               <p>
                 <i class="moji moji-trans"></i>
                 <i class="moji moji-feminism"></i>
@@ -93,7 +101,9 @@
                 <i class="moji moji-peace"></i>
                 <i class="moji moji-fist"></i>
               </p>
-              <p>Bizning hayat bolushimiz yaman gherezge qarshi eng chong küresh.</p>
+              <p>
+                Bizning hayat bolushimiz yaman gherezge qarshi eng chong küresh.
+              </p>
               <table class="sociales">
                 <tr>
                   <td>
