--- a/amigos.html
+++ b/amigos.html
@@ -52,6 +52,14 @@
         text-decoration: none;
         font-size: 1.5em;
       }
+      @font-face {
+        font-family: CL;
+        src: url(assets/cl.woff2);
+        font-display: swap;
+      }
+      footer {
+        font-family: CL, var(--bs-font-sans-serif);
+      }
     </style>
   </head>
   <body class="d-flex flex-column h-100">
