--- a/bo.html
+++ b/bo.html
@@ -22,6 +22,14 @@
       .card img {
         max-width: 100%;
       }
+      @font-face {
+        font-family: CL;
+        src: url(assets/cl.woff2);
+        font-display: swap;
+      }
+      footer {
+        font-family: CL, var(--bs-font-sans-serif);
+      }
     </style>
   </head>
   <body class="d-flex flex-column h-100">
@@ -89,7 +97,7 @@
               <h2 class="card-title" style="margin-left: 130px">
                 <span class="art">རི་མདུན་</span>
                 <span style="font-size: 0.6em">༺ཧྲན་ཇནས་༻</span>
-                            </h2>
+              </h2>
               <p>
                 <i class="moji moji-trans"></i>
                 <i class="moji moji-feminism"></i>
