--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       .card img {
         max-width: 100%;
       }
+      @font-face {
+        font-family: CL;
+        src: url(assets/cl.woff2);
+        font-display: swap;
+      }
+      footer {
+        font-family: CL, var(--bs-font-sans-serif);
+      }
     </style>
   </head>
   <body class="d-flex flex-column h-100">
