--- a/ja.html
+++ b/ja.html
@@ -14,6 +14,14 @@
       .card img {
         max-width: 100%;
       }
+      @font-face {
+        font-family: CL;
+        src: url(assets/cl.woff2);
+        font-display: swap;
+      }
+      footer {
+        font-family: CL, var(--bs-font-sans-serif);
+      }
     </style>
   </head>
   <body class="d-flex flex-column h-100">
@@ -78,7 +86,7 @@
             <div class="card-body">
               <h2 class="card-title" style="margin-left: 130px">
                 <ruby>山<rt>さん</rt>前<rt>ぜん</rt> </ruby>
-                            </h2>
+              </h2>
               <p>
                 <i class="moji moji-trans"></i>
                 <i class="moji moji-feminism"></i>
