--- a/zh.html
+++ b/zh.html
@@ -14,6 +14,14 @@
       .card img {
         max-width: 100%;
       }
+      @font-face {
+        font-family: CL;
+        src: url(assets/cl.woff2);
+        font-display: swap;
+      }
+      footer {
+        font-family: CL, var(--bs-font-sans-serif);
+      }
     </style>
   </head>
   <body class="d-flex flex-column h-100">
@@ -82,7 +90,7 @@
               >😔抑郁中</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-left: 130px">山前              </h2>
+              <h2 class="card-title" style="margin-left: 130px">山前</h2>
               <p>
                 <i class="moji moji-trans"></i>
                 <i class="moji moji-feminism"></i>
