--- a/zht.html
+++ b/zht.html
@@ -17,6 +17,14 @@
       .card img {
         max-width: 100%;
       }
+      @font-face {
+        font-family: CL;
+        src: url(assets/cl.woff2);
+        font-display: swap;
+      }
+      footer {
+        font-family: CL, var(--bs-font-sans-serif);
+      }
     </style>
   </head>
   <body class="d-flex flex-column h-100">
@@ -85,7 +93,7 @@
               >😔憂鬱中</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-left: 130px">山前              </h2>
+              <h2 class="card-title" style="margin-left: 130px">山前</h2>
               <p>
                 <i class="moji moji-trans"></i>
                 <i class="moji moji-feminism"></i>
