--- a/lat.html
+++ b/lat.html
@@ -154,7 +154,7 @@
               <i class="moji moji-github"></i>
             </div>
             <div class="card-body">
-              <img src="http://api.estela.moe/fetchgraph/?user=saeziae" />
+              <img src="https://api.estela.moe/fetchgraph/?user=saeziae" />
               <img
                 src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
               />
