--- a/soutzeu/index.html
+++ b/soutzeu/index.html
@@ -277,7 +277,7 @@
                 <p class="card-text">同志还须努力！</p>
             </div>
         </div>
-        <div class="footer"><span class="badge bg-secondary"> Developed by <a class="text-reset" href="http://github.com/saeziae">山前</a> </span></div>
+        <div class="footer"><span class="badge bg-secondary"> Developed by <a class="text-reset" href="https://github.com/saeziae">山前</a> </span></div>
     </div>
     <script>
         var ans = new Array();
