--- a/ar.html
+++ b/ar.html
@@ -7,9 +7,9 @@
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.rtl.min.css" rel="stylesheet" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Amiri&family=Noto+Sans&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Harmattan&family=Noto+Sans&display=swap");
       main {
-        font-family: "Amiri", "Noto Sans Arabic", "Noto Sans",
+        font-family: "Harmattan", "Noto Sans Arabic", "Noto Sans",
           var(--bs-font-sans-serif);
       }
       .sociales a {
