--- a/uk.html
+++ b/uk.html
@@ -41,7 +41,9 @@
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
-            <li class="breadcrumb-item"><i class="moji moji-su"></i>Русский</li>
+            <li class="breadcrumb-item">
+              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
+            </li>
             <li class="breadcrumb-item active">український</li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
