--- a/ug.html
+++ b/ug.html
@@ -103,7 +103,7 @@
             >
             <div class="card-body">
               <h2 class="card-title" style="margin-right: 130px">
-                التاغ (شەنچيەن)
+                <img src="assets/altagh.svg" style="height:5rem" alt="التاغ"/> (شەنچيەن)
               </h2>
               <p>
                 <i class="moji moji-trans"></i>
