--- a/ug.html
+++ b/ug.html
@@ -7,7 +7,7 @@
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.rtl.min.css" rel="stylesheet" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Amiri&IBM+Plex+Sans+Arabic&family=Noto+Sans&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Amiri&family=IBM+Plex+Sans+Arabic&family=Noto+Sans&display=swap");
       main {
         font-family: "IBM Plex Sans Arabic", "Noto Sans Arabic", "Noto Sans",
           var(--bs-font-sans-serif);
@@ -103,7 +103,7 @@
             >
             <div class="card-body">
               <h2 class="card-title" style="margin-right: 130px">
-                <img src="assets/altagh.svg" style="height:5rem" alt="التاغ"/> (شەنچيەن)
+                <img src="assets/altagh.svg" style="height:4rem" alt="التاغ"/> (شەنچيەن)
               </h2>
               <p>
                 <i class="moji moji-trans"></i>
