--- a/bo.html
+++ b/bo.html
@@ -45,6 +45,7 @@
               <a href="ug.html">ئۇيغۇرچە</a>
               བོད་སྐད་
               <a href="tai.html">Tai</a>
+              <a href="ko.html">조선어</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
