--- a/es.html
+++ b/es.html
@@ -33,6 +33,7 @@
               <a href="ug.html">ئۇيغۇرچە</a>
               <a href="bo.html">བོད་སྐད་</a>
               <a href="tai.html">Tai</a>
+              <a href="ko.html">조선어</a>
             </li>
             <li class="breadcrumb-item active">
               <i class="moji moji-es"></i>Español
