--- a/ug.html
+++ b/ug.html
@@ -47,6 +47,7 @@
               ئۇيغۇرچە
               <a href="bo.html">བོད་སྐད་</a>
               <a href="tai.html">Tai</a>
+              <a href="ko.html">조선어</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
