--- a/ja.html
+++ b/ja.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-100" lang="jp">
+<html class="h-100" lang="ja">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -37,6 +37,7 @@
               <a href="ug.html">ئۇيغۇرچە</a>
               <a href="bo.html">བོད་སྐད་</a>
               <a href="tai.html">Tai</a>
+              <a href="ko.html">조선어</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
