--- a/ug-uly.html
+++ b/ug-uly.html
@@ -36,6 +36,7 @@
               Uyghurche
               <a href="bo.html">བོད་སྐད་</a>
               <a href="tai.html">Tai</a>
+              <a href="ko.html">조선어</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
