--- a/zht.html
+++ b/zht.html
@@ -40,6 +40,7 @@
               <a href="ug.html">ئۇيغۇرچە</a>
               <a href="bo.html">བོད་སྐད་</a>
               <a href="tai.html">Tai</a>
+              <a href="ko.html">조선어</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
