--- a/ru.html
+++ b/ru.html
@@ -42,10 +42,10 @@
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
-            <li class="breadcrumb-item">
-              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
-            </li>
             <li class="breadcrumb-item active">
+              <i class="moji moji-su"></i>Русский
+            </li>
+            <li class="breadcrumb-item">
               <a href="uk.html">український</a>
             </li>
             <li class="breadcrumb-item">
